kubernetes/velero-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero
  namespace: velero
  labels:
    app: velero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velero
  template:
    metadata:
      labels:
        app: velero
    spec:
      serviceAccountName: velero
      containers:
        - name: velero
          image: velero/velero:v1.10.2
          args:
            - server
          volumeMounts:
            - mountPath: /credentials
              name: cloud-credentials
              readOnly: true
      volumes:
        - name: cloud-credentials
          secret:
            secretName: cloud-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: velero-service
  namespace: velero
spec:
  selector:
    app: velero
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
