kubernetes/cart-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cart-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-service
                port:
                  number: 5002
